--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,9 @@ NEXTAUTH_SECRET=supersecret
 # @see https://next-auth.js.org/providers/discord
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
+
+# Auth0 credentials for authentication
+# @see https://next-auth.js.org/providers/auth0
+AUTH0_CLIENT_ID=
+AUTH0_CLIENT_SECRET=
+AUTH0_ISSUER=
